# dbt-exploration

./: .gitignore  README.md  dbt_project.yml  notes.md  pyproject.toml  test.sql
macros/utils/: model_path.sql
models/: dim_customers.sql  stg_orders.sql
models/example/: my_first_dbt_model.sql
models/marts/core/: dim_customers.sql  fct_orders.sql
models/staging/jaffle_shop/: src_jaffle_shop.yml  stg_customers.sql  stg_orders.sql
models/staging/stripe/: src_stripe.yml  stg_payments.sql
