[tool.poetry]
name = "dbt-exploration"
version = "0.1.0"
description = ""
authors = ["Xiangshi Yin <piupiuyin@gmail.com>"]
readme = "README.md"
packages = [{include = "dbt_exploration"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-bigquery = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
